# SSHAlert

./: .gitignore  README.md  pyproject.toml
.github/workflows/: Builder.yml
src/docker/: Dockerfile  README.md  start.sh
src/sshalert/: database.py  dockers.py  errors.py  log.py  parse_config.py
